--- a/package.json
+++ b/package.json
@@ -17,19 +17,18 @@
   },
   "homepage": "https://github.com/LeeJeongYeop/nayak-express-skeleton#readme",
   "dependencies": {
-    "body-parser": "~1.17.2",
+    "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
-    "debug": "~3.0.0",
-    "ejs": "~2.5.7",
-    "express": "~4.15.4",
+    "debug": "~3.1.0",
+    "express": "~4.16.2",
     "express-validation": "^1.0.2",
-    "joi": "^10.6.0",
-    "jsonwebtoken": "^7.4.3",
-    "morgan": "~1.8.2",
-    "mysql": "^2.14.1",
-    "serve-favicon": "~2.4.3",
-    "winston": "^2.3.1",
-    "winston-daily-rotate-file": "^1.4.6"
+    "joi": "^13.0.1",
+    "jsonwebtoken": "^8.1.0",
+    "moment": "^2.19.1",
+    "morgan": "~1.9.0",
+    "mysql": "^2.15.0",
+    "winston": "^2.4.0",
+    "winston-daily-rotate-file": "^1.7.2"
   }
 }
